--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.5
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/bugle.png"
+  adaptive_icon_background: "#BD1628"
+  adaptive_icon_foreground: "assets/bugle.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
