--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^4.3.1
   flutter_inappwebview: ^3.1.0
   share: ^0.6.4+3
+  intl: ^0.16.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
