--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   flutter_inappwebview: ^3.1.0
   share: ^0.6.4+3
   intl: ^0.16.1
+  package_info: ^0.4.1
+  url_launcher: ^5.5.0
+  font_awesome_flutter: ^8.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -59,6 +62,7 @@ flutter:
   assets:
     - assets/bugle.png
     - assets/404.png
+    - assets/photo.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -84,6 +88,11 @@ flutter:
           weight: 700
         - asset: assets/fonts/RobotoSlab-Black.ttf
           weight: 900
+    - family: PlayfairDisplay
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-Regular.ttf
+        - asset: assets/fonts/PlayfairDisplay-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
