--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   package_info: ^0.4.1
   url_launcher: ^5.5.0
   font_awesome_flutter: ^8.8.1
+  sqflite: ^1.3.1
+  path: ^1.6.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
