--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   sqflite: ^1.3.1
   path: ^1.6.2
+  flutter_local_notifications: ^1.4.4+2
+  rxdart: ^0.23.1
+  firebase_messaging: ^6.0.16
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
